@@ -2,7 +2,15 @@ Scheduler.grid.History = function(config) {
     config = config || {};
     this.ident = config.ident || Ext.id();
     this.exp = new Ext.grid.RowExpander({
-        tpl : new Ext.Template('<p>{message}</p> {errors}')
+        renderer : function(v, p, record){
+            if (!record.data.message && !record.data.errors) {
+                return '';
+            }
+
+            p.cellAttr = 'rowspan="2"';
+            return '<div class="x-grid3-row-expander">&#160;</div>';
+        },
+        tpl : new Ext.Template('<pre><code style="width: 100%; overflow-x: scroll; white-space: pre-wrap;">{message:htmlEncode}</code></pre> {errors}')
     });
 
     Ext.applyIf(config,{
@@ -11,6 +19,7 @@ Scheduler.grid.History = function(config) {
         ,emptyText: _('scheduler.error.noresults')
 		,fields: [
              { name: 'task_id', type: 'int' }
+            ,{ name: 'task_string', type: 'string' }
             ,{ name: 'task_class_key', type: 'string' }
             ,{ name: 'task_content', type: 'string' }
             ,{ name: 'task_namespace', type: 'string' }
@@ -35,54 +44,54 @@ Scheduler.grid.History = function(config) {
 			,width: 50
             ,hidden: true
 		},{
-            header: _('scheduler.task_key')
-            ,dataIndex: 'task_key'
-            ,sortable: true
-            ,width: 50
-            ,hidden: true
-        },{
 			header: _('scheduler.task')
-			,dataIndex: 'task'
-			,sortable: true
-			,width: 50
-            ,hidden: true
+			,dataIndex: 'task_string'
+			,sortable: false
+			,width: 125
 		},{
 			header: _('scheduler.namespace')
 			,dataIndex: 'task_namespace'
 		    ,sortable: true
-			,width: 200
+			,width: 100
+            ,hidden: true
 		},{
 			header: _('scheduler.reference')
 			,dataIndex: 'task_reference'
 		    ,sortable: true
-			,width: 200
+			,width: 100
+            ,hidden: true
 		},{
 			header: _('scheduler.timing')
 			,dataIndex: 'timing'
 		    ,sortable: true
-			,width: 150
+			,width: 100
             ,renderer: Ext.util.Format.dateRenderer(MODx.config.manager_date_format + ' ' + MODx.config.manager_time_format)
 		},{
 			header: _('scheduler.executedon')
 			,dataIndex: 'executedon'
 		    ,sortable: true
-			,width: 150
+			,width: 100
             ,renderer: Ext.util.Format.dateRenderer(MODx.config.manager_date_format + ' ' + MODx.config.manager_time_format)
 		},{
 			header: _('scheduler.status')
 			,dataIndex: 'status'
 		    ,sortable: false
-			,width: 100
+			,width: 50
             ,renderer: this.statusRenderer
 		},{
 			header: _('scheduler.processing_time')
 			,dataIndex: 'processing_time'
 		    ,sortable: true
-			,width: 100
+			,width: 50
             ,renderer: function (v) {
 			    return v.toFixed(2) + 's';
             }
 		},{
+            header: _('scheduler.task_key')
+            ,dataIndex: 'task_key'
+            ,sortable: true
+            ,width: 50
+        },{
 			header: _('scheduler.content')
 			,dataIndex: 'task_content'
 		    ,sortable: true
@@ -90,6 +99,14 @@ Scheduler.grid.History = function(config) {
             ,hidden: true
 		}]
         ,tbar: ['->',{
+            xtype: 'scheduler-combo-tasklist'
+            ,id: 'scheduler-filter-run-task-'+this.ident
+            ,emptyText: _('scheduler.filter_task')
+            ,allowBlank: true
+            ,listeners: {
+                'select': { fn: this.searchTask ,scope: this }
+            }
+        },'-',{
             xtype: 'modx-combo-namespace'
             ,id: 'scheduler-filter-run-namespace-'+this.ident
             ,emptyText: _('scheduler.filter_namespace...')
@@ -136,15 +153,23 @@ Ext.extend(Scheduler.grid.History, Scheduler.grid.Tasks, {
         this.getBottomToolbar().changePage(1);
         this.refresh();
     }
+    ,searchTask: function(tf,nv,ov) {
+        var s = this.getStore();
+        s.baseParams.task = tf.getValue();
+        this.getBottomToolbar().changePage(1);
+        this.refresh();
+    }
     ,searchClear: function(tf,nv,ov) {
         var s = this.getStore();
             s.baseParams.query = '';
             s.baseParams.namespace = '';
+            s.baseParams.task = '';
         this.getBottomToolbar().changePage(1);
         this.refresh();
 
         Ext.getCmp('scheduler-filter-run-namespace-'+this.ident).reset();
         Ext.getCmp('scheduler-search-run-field-'+this.ident).reset();
+        Ext.getCmp('scheduler-filter-run-task-'+this.ident).reset();
     }
     ,getMenu: function() {
         return [{
